# intel-04

./: .gitattributes  .gitignore  .gitmodules  README.md
class01/: README.md  webcam.md
class01/OCR-porting/: README.md  main.py  notebook_utils.py  requirements.txt
class01/mini-project/: README.md
class02/: README.md
class02/homework/: hw03_template.md
class02/python-parallelism/: libraries.ipynb  multiprocess.ipynb  multithread.ipynb  requirements.txt  subprocess.sh
doc/environment/: openvino.md  otx.md  (+1 more)
doc/project/Team_2_EZ_Kiosk/Application/EZ_KIOSK_BUILD/: CMakeLists.txt  CMakeLists.txt.user.0d04b6b  EZ_KIOSK_CLEAN.qmlproject  EZ_KIOSK_CLEAN.qmlproject.qtds  EZ_KIOSK_CLEAN.qmlproject.qtds.d0c36e4  main.qml  qmlmodules
doc/project/Team_2_EZ_Kiosk/Application/EZ_KIOSK_BUILD/content/: App.qml  CMakeLists.txt  Screen00.qml  Screen01.qml  Screen02_01.qml  Screen02_02.qml  Screen03.qml  Screen04.qml  Screen05.qml
doc/project/Team_2_EZ_Kiosk/Application/EZ_KIOSK_BUILD/imports/: CMakeLists.txt
doc/project/Team_2_EZ_Kiosk/Application/EZ_KIOSK_BUILD/imports/EZ_KIOSK_CLEAN/: CMakeLists.txt  qmldir
doc/project/Team_2_EZ_Kiosk/Application/EZ_KIOSK_BUILD/imports/EZ_KIOSK_CLEAN/designer/: plugin.metainfo
doc/project/Team_2_EZ_Kiosk/Application/EZ_KIOSK_BUILD/src/: Worker.cpp  Worker.h  beverage.cpp  beverage.hpp  blindEvent.cpp  blindEvent.hpp  burgers.cpp  burgers.hpp  bwEvent.cpp  bwEvent.hpp  chicken.cpp  chicken.hpp  chickens.hpp  connectEvent.cpp  connectEvent.hpp  import_qml_plugins.h  main.cpp  personClassSocket.cpp  personClassSocket.h  server.cpp  server.h  serverSocket.h  socketthread.cpp  socketthread.h  voiceEvent.cpp  voiceEvent.hpp  voiceQnA.cpp  voiceQnA.h  worker.cpp  worker.h
doc/project/Team_2_EZ_Kiosk/Application/EZ_KIOSK_BUILD/src/py_source/: video_processing.py
doc/project/Team_2_EZ_Kiosk/Application/EZ_KIOSK_BUILD/src/voice_service/: input.json  output.json  stt_tts_module.py  stt_tts_module_yj_modified.py
workdir/: 04_medical.ipynb  05_medical_prediction.py
(+583 files in other folders)
